# guppylang

./: .git-blame-ignore-revs  .release-please-manifest.json  DEVELOPMENT.md  README.md  pyproject.toml  release-please-config.json  ruff.toml
guppylang-internals/: CHANGELOG.md  pyproject.toml
guppylang-internals/src/guppylang_internals/: __init__.py  ast_util.py  debug_mode.py  decorator.py  diagnostic.py  dummy_decorator.py  engine.py  error.py  nodes.py  span.py  wasm_util.py
guppylang-internals/src/guppylang_internals/cfg/: analysis.py  builder.py  cfg.py
guppylang-internals/src/guppylang_internals/checker/: cfg_checker.py  core.py  expr_checker.py  func_checker.py  linearity_checker.py  modifier_checker.py  stmt_checker.py  unitary_checker.py
guppylang-internals/src/guppylang_internals/checker/errors/: comptime_errors.py  (+3 more)
guppylang-internals/src/guppylang_internals/compiler/: cfg_compiler.py  core.py  expr_compiler.py  func_compiler.py  modifier_compiler.py  stmt_compiler.py
guppylang-internals/src/guppylang_internals/definition/: common.py  custom.py  declaration.py  enum.py  function.py  metadata.py  overloaded.py  pytket_circuits.py  struct.py  traced.py  value.py  wasm.py
guppylang-internals/src/guppylang_internals/metadata/: common.py  debug_info_util.py  max_qubits.py
guppylang-internals/src/guppylang_internals/tracing/: builtins_mock.py  function.py  object.py  state.py  unpacking.py  util.py
guppylang-internals/src/guppylang_internals/tys/: arg.py  common.py  const.py  errors.py  param.py  parsing.py  printing.py  qubit.py  subst.py  ty.py
(+362 files in other folders)
